--- a/RedisManager-Web/src/main/resources/application.properties
+++ b/RedisManager-Web/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 monitor.history.duration.hours=24
-monitor.redis.period.second=60
+monitor.redis.period.second=300
 
+manager.resource.path=E:\\source
 
 logging.path=${user.dir}/logs
